--- a/pages/templates/pages/Home.html
+++ b/pages/templates/pages/Home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'pages/base.html' %}
+
+{%  block content  %}
+
 <h1>HomePage</h1>
-</body>
-</html>
+
+{%  endblock content  %}
